feat: support us css updates

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1006,7 +1006,7 @@ a.text-center.btn.btn-outline-light.btn__book {
 
 .col-max-800 {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 60px auto;
 }
 
 .shout.lead {
