--- a/resources/sass/support-us/_featured-image.scss
+++ b/resources/sass/support-us/_featured-image.scss
@@ -19,6 +19,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 25px;
+    margin: 0 auto 0 auto;
 }
 
 /* featured-image-component end */
