--- a/resources/sass/support-us/_nav.scss
+++ b/resources/sass/support-us/_nav.scss
@@ -5,11 +5,11 @@
 
 .navbar .container-fluid {
     max-width: 1290px;
-    padding: 0 12px;
+    padding: 8px 12px 0 12px;
     height: 100%;
 
     @media screen and (min-width: 1290px) {
-        padding: 0;
+        padding: 8px 0 0 0;
     }
 }
 
