feat: exhibitions listing css update

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1004,6 +1004,10 @@ a.text-center.btn.btn-outline-light.btn__book {
     }
 }
 
+.breadcrumb {
+    margin-bottom: 0;
+}
+
 .col-max-800 {
     max-width: 800px;
     margin: 60px auto;
