feat: further css updates for support us components

--- a/resources/sass/support-us/_featured-image.scss
+++ b/resources/sass/support-us/_featured-image.scss
@@ -10,8 +10,10 @@
 }
 
 .featured_image img {
+    max-height: 581px;
+    height: 100%;
     width: 100%;
-    height: auto;
+    object-fit: cover;
     margin-bottom: 18px;
 }
 
