--- a/resources/sass/support-us/_faq.scss
+++ b/resources/sass/support-us/_faq.scss
@@ -11,7 +11,6 @@
 }
 
 .card-header.faq-card-header {
-    padding: 20px 20px 20px 0;
     border-color: #000;
     border-width: 1.5px;
 }
@@ -24,9 +23,14 @@
     border-radius: 0;
 }
 
+.card-header.faq-card-header {
+    padding: 0;
+}
+
 .card-header .faq-card-btn {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     border: 0;
     background: transparent;
@@ -34,6 +38,7 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 25px;
+    height: 65px;
 }
 
 /* faq-component end */
