--- a/resources/sass/support-us/_payment-grid.scss
+++ b/resources/sass/support-us/_payment-grid.scss
@@ -9,7 +9,7 @@
     }
 }
 
-.payment h2 {
+.payment h3 {
     margin-bottom: 24px;
     font-size: 26px;
     font-weight: 500;
@@ -20,6 +20,7 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fit, 295px);
+    justify-content: space-evenly;
     gap: 36px;
     margin-bottom: 60px;
 
