--- a/resources/sass/exhibition/_cta.scss
+++ b/resources/sass/exhibition/_cta.scss
@@ -30,7 +30,7 @@
 }
 
 .support-text-component h2,
-.exhibiton-text-compoment h2.exhibition-text-component-title {
+.exhibiton-text-compoment h2 {
     font-weight: 400;
     font-size: 24px;
     line-height: 28px;
