--- a/resources/sass/support-us/_featured-image.scss
+++ b/resources/sass/support-us/_featured-image.scss
@@ -21,7 +21,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 25px;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 0 0;
 }
 
 /* featured-image-component end */
