--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Roboto", sans-serif;
-    background-color: #fff;
+    background-color: #fbfbfb;
     font-size: 1rem;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -312,7 +312,11 @@ a {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #f5f5f5 !important;
+    color: #ffffff !important;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .free_ticket {
@@ -571,13 +575,15 @@ a.text-center.btn.btn-outline-light.btn__book {
 
 .hockney__link {
     min-height: 400px;
-    background: url("https://fitz-cms-images.s3.eu-west-2.amazonaws.com/banner-text-hockney.jpg") no-repeat center;
+    background: url("https://fitz-cms-images.s3.eu-west-2.amazonaws.com/banner-text-hockney.jpg")
+        no-repeat center;
     background-size: contain;
 }
 
 .ttn__link {
     min-height: 400px;
-    background: url("https://fitz-cms-images.s3.eu-west-2.amazonaws.com/ttn_right_panel.jpg") no-repeat center;
+    background: url("https://fitz-cms-images.s3.eu-west-2.amazonaws.com/ttn_right_panel.jpg")
+        no-repeat center;
     background-size: contain;
 }
 
@@ -685,7 +691,8 @@ a.text-center.btn.btn-outline-light.btn__book {
 }
 
 .eden {
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(100deg) brightness(100%) contrast(100%);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(100deg)
+        brightness(100%) contrast(100%);
 }
 
 .card-img-top {
@@ -827,7 +834,8 @@ a.text-center.btn.btn-outline-light.btn__book {
     display: flex;
     padding: 16px;
     justify-content: flex-end;
-    align-items: flex-start;
+    align-items: center;
+    gap: 4px;
     background: white;
     color: #000;
     border: none;
@@ -1019,10 +1027,22 @@ a.text-center.btn.btn-outline-light.btn__book {
 }
 
 .fitz-footer {
+    margin: 0 auto;
+    max-width: 1310px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 200px));
+    justify-content: space-between;
     padding: 0 12px 24px 12px;
+}
+
+.fitz-footer:nth-child(2),
+.fitz-footer:nth-child(3) {
+    justify-self: center;
+}
+
+.fitz-footer:first-child,
+.fitz-footer:last-child {
+    justify-self: end;
 }
 
 .fitz-footer div {
@@ -1051,4 +1071,12 @@ a.text-center.btn.btn-outline-light.btn__book {
         padding-left: 0;
         padding-right: 0;
     }
+}
+.exhibition .card-header,
+.exhibition .card,
+.exhibition .card:hover,
+.support .card-header,
+.support .card,
+.support .card:hover {
+    background: transparent;
 }
