--- a/resources/sass/support-us/_nav.scss
+++ b/resources/sass/support-us/_nav.scss
@@ -2,14 +2,16 @@
 .nav {
     height: 88px;
 }
-
+.navbar {
+    padding: 0.7rem 0;
+}
 .navbar .container-fluid {
     max-width: 1290px;
     padding: 0 12px;
     height: 100%;
 
     @media screen and (min-width: 1290px) {
-        padding: 0
+        padding: 0;
     }
 }
 
@@ -32,7 +34,6 @@
     align-self: stretch;
     margin-top: -8px;
     margin-bottom: -8px;
-    padding-right: 20px;
     display: flex;
     gap: 20px;
     align-items: baseline;
@@ -43,17 +44,6 @@
 #search-donate-container a.nav-link:hover,
 #search-donate-container a.nav-link:focus {
     color: white;
-}
-
-#search-donate-container > a.nav-link {
-    display: none;
-}
-
-@media screen and (min-width: 759px) {
-    #search-donate-container > a.nav-link {
-        display: inline-block;
-
-    }
 }
 
 @media screen and (min-width: 992px) {
@@ -67,8 +57,9 @@
     color: white;
     display: inline-flex;
     align-items: center;
-    height: 100%;
+    height: 108%;
     padding: 0 28px;
+    margin: -4px 0;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
