fix: various css improvements after review

--- a/resources/sass/exhibition/_cta.scss
+++ b/resources/sass/exhibition/_cta.scss
@@ -28,7 +28,7 @@ div.mb-0 {
     font-size: 18px;
 }
 
-.container.col-max-800.mx-auto.support-text-component.exhibition-text-component {
+.exhibition .exhibition-text-component {
     max-width: 720px;
     padding-right: 65px;
     width: 100%;
