--- a/resources/sass/support-us/_grid.scss
+++ b/resources/sass/support-us/_grid.scss
@@ -59,7 +59,7 @@
     padding-top: 16px;
 }
 
-.container-support-card .card .card-body .contents-label p.text-dark {
+.container-support-card .text-dark {
     font-size: 18px;
 }
 
