--- a/resources/sass/support-us/_nav.scss
+++ b/resources/sass/support-us/_nav.scss
@@ -18,7 +18,7 @@
 .navbar:has(#global-announcement) .container-fluid {
     padding-top: 8px;
     @media screen and (min-width: 1290px) {
-        padding-top: 8px;
+        padding-top: 12px;
     }
 }
 
@@ -28,7 +28,7 @@
     }
 }
 
-#search-donate-container {
+.donate-container {
     margin-left: auto;
     opacity: 0;
     align-self: stretch;
@@ -40,14 +40,14 @@
     transition: opacity 3s linear;
 }
 
-#search-donate-container a.nav-link,
-#search-donate-container a.nav-link:hover,
-#search-donate-container a.nav-link:focus {
+.donate-container a.nav-link,
+.donate-container a.nav-link:hover,
+.donate-container a.nav-link:focus {
     color: white;
 }
 
 @media screen and (min-width: 992px) {
-    #search-donate-container {
+    .donate-container {
         padding-right: 0;
     }
 }
