--- a/resources/sass/support-us/_featured-video.scss
+++ b/resources/sass/support-us/_featured-video.scss
@@ -2,6 +2,10 @@
 .featured_video {
     max-width: 1290px;
     margin: 56px auto;
+
+    @media screen and (min-width: 1320px) {
+        padding: 0;
+    }
 }
 
 /* featured-video-component end */
