--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import "~bootstrap/scss/utilities/api";
 @import "extend-bootstrap";
 @import "support";
+@import "_nav";
 
 @import 'support-us/_support-us';
 @import "exhibition/exhibition";
