--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1083,14 +1083,10 @@ a.text-center.btn.btn-outline-light.btn__book {
 }
 
 .archived-btn {
+    background:  #EEF3F4;
+    color: #000;
     display: inline-block;
     font-size: 16px;
     font-weight: 600;
-    background: #000;
-    color: #fff;
     padding: 12px 24px;
-}
-
-.archived-btn:hover {
-    color: #fff;
 }
