fix: breadcrumbs margin

--- a/resources/sass/exhibition/_hero.scss
+++ b/resources/sass/exhibition/_hero.scss
@@ -3,7 +3,10 @@
     background-color: black;
 }
 
-.exhibiton .navbar +.exhibition-hero+.breadcrumbs-su,
-.navbar:has(#global-announcement)+.exhibition-hero+.breadcrumbs-su {
+.exhibition-hero + .breadcrumbs-su {
+    margin: 0;
+}
+
+.navbar:has(#global-announcement) + .exhibition-hero + .breadcrumbs-su {
     margin: 0;
 }
