--- a/resources/sass/exhibition/_related-events.scss
+++ b/resources/sass/exhibition/_related-events.scss
@@ -50,6 +50,11 @@
     width: 100%;
     & .cta-title {
         font-size: 20px;
+        font-weight: 600;
+    }
+    & .cta-title-date {
+        font-size: 18px;
+        font-weight: 600;
     }
     & .cta-copy {
         font-size: 18px;
