--- a/resources/sass/support-us/_support-us.scss
+++ b/resources/sass/support-us/_support-us.scss
@@ -5,6 +5,7 @@
 @import '_text';
 @import '_featured-image';
 @import '_featured-video';
+@import '_image-gallery';
 @import '_payment-grid';
 @import '_fifty-fifty';
 @import '_faq';
