Specifically make collection carousel controls easier to see and focus-accessible

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5857,6 +5857,36 @@ textarea.form-control-lg {
   display: block;
 }
 
+.collection-carousel button.carousel-control-prev {
+  background: linear-gradient(to right, black, rgba(0,0,0,0));
+  transform: translateX(10px)
+}
+
+.collection-carousel .carousel-control-prev:hover,
+.collection-carousel .carousel-control-prev:focus {
+  background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.3));
+}
+
+.collection-carousel button.carousel-control-next {
+  background: linear-gradient(to left, black, rgba(0,0,0,0));
+  transform: translateX(-10px)
+}
+
+.collection-carousel .carousel-control-next:hover,
+.collection-carousel .carousel-control-next:focus {
+  background: linear-gradient(to left, rgba(0,0,0,0.8), rgba(0,0,0,0.3));
+}
+
+.gallery-card {
+  height: 400px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 /* rtl:begin:ignore */
 .carousel-item-next:not(.carousel-item-start),
 .active.carousel-item-end {
